--- a/docs/컴퓨터공학기초/1.비트/5.글자를다루는방법.md
+++ b/docs/컴퓨터공학기초/1.비트/5.글자를다루는방법.md
@@ -1,205 +1,408 @@
-# 컴퓨터에서 글자를 다루는 방법 완전 가이드
+# 컴퓨터가 글자를 다루는 방법
 
-## 🔤 기본 개념: 숫자에서 문자로
+## 🔤 기본 원리: 숫자만 인식하는 컴퓨터
 
-### **컴퓨터는 왜 숫자만 인식하나?**
+**컴퓨터는 글자란 없다. 컴퓨터는 숫자만 인식할 수 있다.**
+
+**컴퓨터가 숫자만 인식하는 이유:**
 
 ```
 
-컴퓨터의 기본 원리:
+컴퓨터의 기본 구조:
 - 전기 신호: ON(1) / OFF(0)
-- 모든 정보: 2진수 조합
-- 문자라는 개념 자체가 존재하지 않음
+- 모든 처리: 2진수 연산
+- CPU, 메모리: 숫자(비트 패턴)만 저장/처리
 
-따라서 문자 표현 = 숫자와 문자의 매핑 규약 필요
-
-```
-
-### **문자 매핑의 탄생**
+예시:
+전기 신호 01000001₂ → 컴퓨터에게는 그냥 "65"라는 숫자
+사람에게는 → 'A'라는 문자로 해석
 
 ```
 
-초기 컴퓨터 시대 (1960년대):
-각 회사마다 서로 다른 매핑 규칙 사용
-→ IBM: A=193, B=194, C=195
-→ 다른 회사: A=65, B=66, C=67
-→ 호환성 문제 심각!
+따라서 **컴퓨터에서 글자를 인식시키기 위해서 특정 숫자에 글자를 매핑하기 시작했다. 이러한 규약을 코드체계**라고 한다.
 
-해결책: 표준 코드 체계 필요 → ASCII 탄생
+**매핑의 실제 모습:**
 
 ```
 
-## 📊 ASCII (American Standard Code for Information Interchange)
-
-### **ASCII 코드 체계 상세**
+매핑 테이블 (일부):
+숫자 ↔ 문자
+65 ↔ 'A'
+66 ↔ 'B'
+67 ↔ 'C'
+...
+97 ↔ 'a'
+98 ↔ 'b'
+32 ↔ ' ' (공백)
 
 ```
 
-ASCII 구조:
+## 🔢 구체적인 매핑 예시
+
+- **십진수 `65`**
+- **컴퓨터에겐 영문 대문자 `'A'`**
+- **16진수로는 `0x41`**
+
+**다양한 진법으로 표현:**
+
+```
+
+문자 'A'의 다양한 표현:
+- 2진수: 01000001₂
+- 8진수: 101₈
+- 10진수: 65₁₀
+- 16진수: 0x41₁₆
+
+모두 같은 값이지만 표기법만 다름!
+
+```
+
+그래서 **문자 A,B,C는 65,66,67 매핑된다.**
+
+**연속된 알파벳 매핑 패턴:**
+
+```
+
+대문자:           소문자:
+A = 65 (0x41)     a = 97  (0x61)
+B = 66 (0x42)     b = 98  (0x62)
+C = 67 (0x43)     c = 99  (0x63)
+...               ...
+Z = 90 (0x5A)     z = 122 (0x7A)
+
+패턴: 대문자와 소문자는 정확히 32 차이!
+
+```
+
+## 🖥️ 렌더링 과정
+
+즉 **컴퓨터는 특정 숫자를 특정 문자 모양과 연결시켜서 해당 문자를 그려준다. 이 과정을 렌더링**이라고 한다.
+
+**렌더링 과정 상세:**
+
+```
+
+1단계: 숫자 해석
+메모리: 01000001₂ (65₁₀)
+
+2단계: 코드표 참조
+ASCII 테이블: 65 → 'A'
+
+3단계: 폰트 데이터 로드
+폰트 파일에서 'A'의 비트맵/벡터 데이터 검색
+
+4단계: 화면 렌더링
+픽셀 단위로 문자 모양을 화면에 그리기
+
+최종 결과: 화면에 'A' 모양이 표시됨
+
+```
+
+**폰트와 렌더링의 관계:**
+
+```
+
+같은 코드 65('A')라도:
+- Arial 폰트: 깔끔한 A
+- Times 폰트: 세리프가 있는 A
+- Comic Sans: 둥글둥글한 A
+
+코드는 같지만 폰트에 따라 모양이 달라짐!
+
+```
+
+## ❌ 초기 문제점: 각자의 코드체계
+
+**이렇게 특정 코드와 숫자를 매핑하면서부터 여러 회사들마다 각자의 코드체계가 생겨나게 되는 문제점이 발생하게 된다.**
+
+**실제 발생했던 호환성 문제:**
+
+```
+
+IBM 컴퓨터:
+A = 193, B = 194, C = 195 (EBCDIC 코드)
+
+다른 회사 컴퓨터:
+A = 65,  B = 66,  C = 67  (ASCII 기반)
+
+파일 교환 시 문제:
+IBM에서 작성한 "ABC" → 다른 회사 컴퓨터에서 깨져서 표시
+
+```
+
+**지역별 코드 체계 혼재:**
+
+```
+
+미국: 영어 중심 코드
+일본: 가나/한자 포함 Shift-JIS
+한국: 한글 포함 EUC-KR
+유럽: 악센트 문자 포함 ISO-8859
+
+결과: 국제 문서 교환 시 깨짐 현상 빈발
+
+```
+
+## ✅ 해결책: ASCII 표준의 등장
+
+**이러한 문제를 해결하기 위해 미국에서 표준 코드 체계를 만들게 되는데 이 체계가 ASCII(American Standard Code for Information Interchange) 아스키 코드이다.**
+
+**ASCII(American Standard Code for Information Interchange)는 미국에서 사용하는 표준 코드 체계**
+
+**ASCII의 구체적 특징:**
+
+```
+
+기본 구조:
 - 7비트 사용 (0~127, 총 128개 문자)
-- 나중에 8비트로 확장 (0~255, 확장 ASCII)
-- 미국 영어 중심 설계
+- 1963년 제정, 1977년 최종 확정
+- 영어 알파벳 + 숫자 + 기호 + 제어문자
+
+범위별 분류:
+0-31:   제어문자 (통신/화면 제어)
+32-47:  특수문자 (공백, !, ", # 등)
+48-57:  숫자 문자 ('0'~'9')
+58-64:  기호 (:, ;, <, = 등)
+65-90:  대문자 ('A'~'Z')
+91-96:  기호 ([, \, ], ^ 등)
+97-122: 소문자 ('a'~'z')
+123-127: 기호 ({, |, }, ~ 등)
 
 ```
 
-### **ASCII 코드표 (주요 부분)**
+## 🔍 숫자 vs 문자의 명확한 구분
 
-| 범위 | 10진수 | 16진수 | 문자 | 설명 |
-| --- | --- | --- | --- | --- |
-| **제어문자** | 0-31 | 0x00-0x1F | - | 화면 제어, 통신 제어 |
-| **공백/기호** | 32-47 | 0x20-0x2F | 공백, !, ", #, $ 등 | 특수 문자 |
-| **숫자** | 48-57 | 0x30-0x39 | '0'~'9' | 문자로서의 숫자 |
-| **기호** | 58-64 | 0x3A-0x40 | :, ;, <, =, >, ?, @ | 구두점, 연산자 |
-| **대문자** | 65-90 | 0x41-0x5A | 'A'~'Z' | 영문 대문자 |
-| **기호** | 91-96 | 0x5B-0x60 | [, , ], ^, _, ` | 특수 기호 |
-| **소문자** | 97-122 | 0x61-0x7A | 'a'~'z' | 영문 소문자 |
-| **기호** | 123-127 | 0x7B-0x7F | {, | , }, ~, DEL |
+그래서 **우리는 문자1과 숫자1을 명확하게 이해하고 구분할 줄 알아야 한다.**
 
-## 숫자 vs 문자의 명확한 구분
+- **`숫자 1`은 `0x01`**
+- **`문자'1'`은 `0x31`**
 
-### **숫자 1 vs 문자 '1'**
+**상세한 차이점 분석:**
 
 ```
 
 숫자 1:
 - 값: 1₁₀ = 0x01₁₆ = 00000001₂
-- 의미: 수학적 값 1
-- 용도: 계산, 연산
+- 메모리: 1바이트 (또는 4바이트 int)
+- 용도: 수학 계산, 반복문 카운터
+- 예시: for(int i=1; i<10; i++)
 
 문자 '1':
 - 값: 49₁₀ = 0x31₁₆ = 00110001₂
-- 의미: 숫자 모양의 문자
+- 메모리: 1바이트 (ASCII)
 - 용도: 화면 출력, 텍스트 표시
+- 예시: printf("숫자 %c", '1');
 
 ```
 
-### **실제 메모리 저장 비교**
+**프로그래밍에서의 실제 구분:**
 
 ```c
 
 // C 언어 예시
-int number = 1;// 메모리: 01 00 00 00 (4바이트, 리틀 엔디안)
-char character = '1';// 메모리: 31 (1바이트)
+int number = 1;// 숫자: 메모리에 0x01 저장
+char character = '1';// 문자: 메모리에 0x31 저장
 
 printf("%d\n", number);// 출력: 1
-printf("%c\n", character);// 출력: 1 (모양은 같지만 완전히 다름!)
+printf("%c\n", character);// 출력: 1 (시각적으론 같지만 완전히 다름!)
+printf("%d\n", character);// 출력: 49 (문자의 실제 숫자값)// 변환 방법
+int digit = character - '0';// '1' - '0' = 49 - 48 = 1
+char symbol = number + '0';// 1 + '0' = 1 + 48 = 49 = '1'
 
 ```
 
-## 제어 문자 (Control Characters)
+## 💾 바이너리 vs 텍스트
 
-### **중요한 제어 문자들**
+**컴퓨터의 모든 정보는 2진수로 표현되기 때문에 바이너리이다. 이때 아스키코드와 같은 코드체계처럼 문자로 표현할 수 있는 영역을 `Text`라고 한다.**
 
-| 이름 | 10진수 | 16진수 | 표기 | 설명 |
-| --- | --- | --- | --- | --- |
-| **NULL** | 0 | 0x00 | \0 | 문자열 끝 표시 |
-| **TAB** | 9 | 0x09 | \t | 탭 (8칸 이동) |
-| **LF** | 10 | 0x0A | \n | 줄바꿈 (Line Feed) |
-| **CR** | 13 | 0x0D | \r | 커서를 줄 맨 앞으로 (Carriage Return) |
-| **ESC** | 27 | 0x1B | \e | 이스케이프 (터미널 제어) |
-| **SPACE** | 32 | 0x20 |  | 공백 |
-| **DEL** | 127 | 0x7F |  | 삭제 |
-
-### **줄바꿈의 운영체제별 차이**
+**바이너리와 텍스트의 구분:**
 
 ```
 
-Windows: CR + LF = 0x0D 0x0A = \r\n
-Unix/Linux: LF = 0x0A = \n
-Mac (구버전): CR = 0x0D = \r
+모든 디지털 데이터 = 바이너리 (0과 1의 조합)
 
-예시의 "Hello World!\r\n"는 Windows 스타일
+바이너리 중에서:
+1. Text 영역: ASCII/UTF-8로 해석 가능
+   - 48 65 6C 6C 6F → "Hello"
+   - 사람이 읽을 수 있음
+
+2. Non-Text 영역: 문자로 해석 불가
+   - 4D 5A 90 00 → 실행파일 헤더
+   - FF D8 FF E0 → JPEG 이미지 헤더
+   - 문자로 표시하면 깨짐
 
 ```
 
-## 🔍 헥스 덤프 상세 분석
+- *숫자와 글자를 구별하지 않고 정보를 말할 때는 `바이너리(Binary)`*라고 한다
 
-### **헥스 덤프 구조 해석**
+**실제 파일에서의 바이너리 vs 텍스트:**
 
 ```
 
-offset(h) 00 01 02 03 04 05 06 07   ASCII
+텍스트 파일 (.txt):
+- 모든 바이트가 ASCII/UTF-8 범위
+- 메모장으로 열면 정상 표시
+- 예: 소스코드, 설정파일, 문서
+
+바이너리 파일 (.exe, .jpg, .mp3):
+- ASCII 범위 밖의 바이트 포함
+- 메모장으로 열면 깨진 문자 표시
+- 전용 프로그램 필요
+
+```
+
+## 🔍 헥스 덤프 실제 분석
+
+```bash
+
+bash
+Hello World! \r\n
+Hi. \r\n
+\r\n
+offset(h) 00 01 02 03 04 05 06 07
 00000000  48 65 6C 6C 6F 20 57 6F   Hello Wo
 00000008  72 6C 64 21 0D 0A 48 49   rld!..Hi
 00000010  2E 0D 0A 0D 0A            .....
 
 ```
 
-## 바이너리 vs 텍스트
-
-### **바이너리 (Binary) 데이터**
+**바이트별 상세 해석:**
 
 ```
 
-정의: 모든 디지털 정보 (0과 1의 조합)
-특징:
-- 문자 인코딩과 무관한 순수 데이터
-- 실행 파일, 이미지, 동영상, 압축 파일 등
-- 텍스트 에디터로 열면 깨져 보임
+주소 0x00000000:
+48₁₆ = 72₁₀ = 'H'  (대문자 H)
+65₁₆ = 101₁₀ = 'e' (소문자 e)
+6C₁₆ = 108₁₀ = 'l' (소문자 l)
+6C₁₆ = 108₁₀ = 'l' (소문자 l)
+6F₁₆ = 111₁₀ = 'o' (소문자 o)
+20₁₆ = 32₁₀ = ' '  (공백)
+57₁₆ = 87₁₀ = 'W'  (대문자 W)
+6F₁₆ = 111₁₀ = 'o' (소문자 o)
 
-예시:
-실행파일 .exe: 4D 5A 90 00 03 00 00 00...
-JPEG 이미지: FF D8 FF E0 00 10 4A 46...
-
-```
-
-### **텍스트 (Text) 데이터**
-
-```
-
-정의: 문자 인코딩으로 해석 가능한 바이너리
-특징:
-- ASCII, UTF-8 등으로 문자로 변환 가능
-- 사람이 읽을 수 있는 형태
-- 소스 코드, 문서, 설정 파일 등
-
-예시:
-"Hello" = 48 65 6C 6C 6F (ASCII)
+주소 0x00000008:
+72₁₆ = 114₁₀ = 'r' (소문자 r)
+6C₁₆ = 108₁₀ = 'l' (소문자 l)
+64₁₆ = 100₁₀ = 'd' (소문자 d)
+21₁₆ = 33₁₀ = '!'  (느낌표)
+0D₁₆ = 13₁₀ = CR   (캐리지 리턴)
+0A₁₆ = 10₁₀ = LF   (라인 피드)
+48₁₆ = 72₁₀ = 'H'  (대문자 H)
+49₁₆ = 73₁₀ = 'i'  (소문자 i)
 
 ```
 
-## 🔧 프로그래밍에서의 활용
+**공백 또한 하나의 문자이기 때문에 `20`**
 
-### **문자열 저장 방식**
-
-```c
-
-// C 스타일 문자열 (Null-terminated)
-char message[] = "Hello";
-// 메모리: 48 65 6C 6C 6F 00//         H  e  l  l  o  \0// 배열 크기: 6바이트 (문자 5개 + null terminator)
+**공백 문자의 중요성:**
 
 ```
 
-### **문자 변환 테크닉**
+공백도 실제 문자:
+- ASCII 코드: 32 (0x20)
+- 화면에는 비어 보이지만 실제로는 존재
+- 프로그래밍에서 중요한 구분자 역할
 
-```c
-
-// 대문자 ↔ 소문자 변환
-char upper = 'A';// 0x41
-char lower = upper + 32;// 0x61 = 'a'// 또는 비트 연산 사용
-char lower2 = upper | 0x20;// 0x41 | 0x20 = 0x61// 숫자 문자 → 숫자 값
-char digit = '7';// 0x37 = 55
-int number = digit - '0';// 55 - 48 = 7
+공백 관련 문자들:
+Space: 32 (0x20) - 일반 공백
+Tab:   9  (0x09) - 탭 (보통 8칸)
 
 ```
 
-### **인코딩 확인 방법**
+**또한 world! 뒤에 엔터 또한 `0D 0A`로 표현한다.**
 
-```bash
-
-# Linux/Unix에서 파일 인코딩 확인
-file -i filename.txt
-# 출력: filename.txt: text/plain; charset=utf-8# 헥스 덤프로 내용 확인
-hexdump -C filename.txt
-xxd filename.txt
+**줄바꿈 문자의 운영체제별 차이:**
 
 ```
 
-## 핵심 정리
+Windows: CR + LF = 0x0D 0x0A = \r\n
+- Carriage Return + Line Feed
+- 타자기 시대의 잔재 (캐리지 복귀 + 줄 이동)
 
-1. **컴퓨터는 숫자만 인식** → 문자는 숫자와의 매핑 규약
-2. **ASCII**: 미국 표준, 7비트, 128개 문자
-3. **숫자 1 ≠ 문자 '1'**: 완전히 다른 값 (0x01 vs 0x31)
-4. **제어 문자**: 화면/통신 제어용 특수 문자들
-5. **바이너리**: 모든 디지털 데이터, **텍스트**: 문자로 해석 가능한 바이너리
-6. **헥스 덤프**: 바이너리 데이터를 16진수로 표시하는 도구
+Unix/Linux/Mac: LF = 0x0A = \n
+- Line Feed만 사용
+- 더 간단하고 효율적
+
+Mac (구버전): CR = 0x0D = \r
+- 현재는 거의 사용하지 않음
+
+실제 파일 교환 시 문제:
+Windows에서 작성한 텍스트 → Linux에서 ^M 문자 표시
+Linux에서 작성한 텍스트 → Windows 메모장에서 줄바꿈 안됨
+
+```
+
+## 📊 제어 문자 상세 분석
+
+**헥스 덤프에서 점(.)으로 표시되는 이유:**
+
+```
+
+제어 문자 (0x00~0x1F, 0x7F):
+- 화면에 출력되지 않는 특수 기능 문자
+- 통신 제어, 화면 제어 용도
+- 헥스 에디터에서 점(.)으로 표시
+
+주요 제어 문자:
+0x00 (NUL): 문자열 끝 표시
+0x07 (BEL): 경고음 (벨)
+0x08 (BS):  백스페이스
+0x09 (TAB): 탭
+0x0A (LF):  라인 피드 (줄바꿈)
+0x0D (CR):  캐리지 리턴
+0x1B (ESC): 이스케이프 (터미널 제어)
+0x7F (DEL): 삭제
+
+```
+
+## 🌍 ASCII의 한계와 발전
+
+**ASCII의 문제점과 해결책:**
+
+```
+
+ASCII 한계:
+- 영어만 지원 (128개 문자)
+- 한글, 중국어, 일본어 등 표현 불가
+- 유럽의 악센트 문자도 부족
+
+해결 과정:
+1. 확장 ASCII (8비트, 256문자)
+   - 서유럽 문자 일부 추가
+   - 여전히 제한적
+
+2. 코드 페이지 (Code Page)
+   - 지역별 다른 문자 집합
+   - CP949(한국), Shift-JIS(일본), GB2312(중국)
+   - 호환성 문제 지속
+
+3. 유니코드 (Unicode)
+   - 전 세계 모든 문자 통합
+   - UTF-8, UTF-16, UTF-32 인코딩
+   - 현재 웹 표준
+
+```
+
+**한글 처리의 발전 과정:**
+
+```
+
+초기: 완성형 (2350자 한정)
+- 가, 나, 다... 미리 정의된 글자만
+- 새로운 글자는 표현 불가
+
+현재: 조합형 (UTF-8)
+- ㄱ + ㅏ + ㄴ = 간
+- 모든 한글 조합 가능 (11,172자)
+- 초성 19개 × 중성 21개 × 종성 28개
+
+```
+
+## 🎯 핵심 요약
+
+1. **기본 원리**: 컴퓨터는 숫자만 인식 → 숫자와 문자의 매핑 규약 필요
+2. **ASCII 표준**: 미국 중심 7비트 문자 체계 (0~127)
+3. **숫자 vs 문자**: 숫자 1(0x01) ≠ 문자 '1'(0x31)
+4. **렌더링**: 숫자 → 코드표 참조 → 폰트 로드 → 화면 출력
+5. **바이너리 vs 텍스트**: 모든 데이터는 바이너리, 그 중 문자로 해석 가능한 부분이 텍스트
+6. **제어 문자**: 화면/통신 제어용, 줄바꿈은 운영체제별로 다름
