docs(프로그래밍): 절차적 글쓰기 연습

--- a/docs/컴퓨터공학기초/4.프로그래밍/4.1프로그래밍.md
+++ b/docs/컴퓨터공학기초/4.프로그래밍/4.1프로그래밍.md
@@ -620,3 +620,263 @@ public class BattleSystem {
 2. **완전성**: 모든 경우의 수와 예외 상황 고려
 3. **논리성**: 순서와 조건의 체계적 구성
 4. **효율성**: 더 간단하고 빠른 방법 탐구
+
+# 카드 정렬 게임: 절차적 문제 해결
+
+## 🎯 문제 상황 정의
+
+### **게임 규칙과 제약사항**
+
+```text
+`초기 상태:
+- 카드 5장이 뒤집어져 있음 (숫자 보이지 않음)
+- 각 카드에는 서로 다른 숫자가 적혀 있음
+
+영희의 능력:
+- 한 번에 카드 2장까지 뒤집을 수 있음
+- 두 카드 중 어느 것이 더 큰지만 알려줌 (구체적 숫자는 모름)
+- 비교 후 카드는 다시 뒤집힘
+
+철수의 능력:
+- 영희에게 어떤 카드들을 비교할지 지시
+- 원하면 두 카드의 위치를 바꿀 수 있음
+
+목표:
+- 가장 적은 비교 횟수로 카드를 오름차순 정렬`
+```
+
+## 📝 제시된 알고리즘 분석
+
+### **버블 정렬 방식 접근법**
+
+```text
+`제시된 방법:
+1. 첫 번째 카드(위치 0)를 기준으로 설정
+2. 영희가 순차적으로 비교: (0,1), (0,2), (0,3), (0,4)
+3. 기준 카드가 비교 카드보다 크면 위치 교환
+4. 다음 위치로 이동하여 반복
+
+예시 실행:
+카드 위치: [0] [1] [2] [3] [4]
+실제 값: [5] [2] [8] [1] [3]  (숨겨진 정보)
+
+1라운드: 기준 위치 0
+- 비교 (0,1): 5 vs 2 → 5가 큼 → 교환
+  결과: [2] [5] [8] [1] [3]
+- 비교 (0,2): 2 vs 8 → 8이 큼 → 교환 안함
+- 비교 (0,3): 2 vs 1 → 2가 큼 → 교환
+  결과: [1] [5] [8] [2] [3]
+- 비교 (0,4): 1 vs 3 → 3이 큼 → 교환 안함
+
+2라운드: 기준 위치 1
+- 비교 (1,2): 5 vs 8 → 8이 큼 → 교환 안함
+- 비교 (1,3): 5 vs 2 → 5가 큼 → 교환
+  결과: [1] [2] [8] [5] [3]
+- 비교 (1,4): 2 vs 3 → 3이 큼 → 교환 안함
+
+계속 진행...`
+```
+
+### **알고리즘의 장단점**
+
+```text
+`장점:
+1. 구현이 단순하고 이해하기 쉬움
+2. 각 단계가 명확하게 정의됨
+3. 안정적으로 정렬 완료 보장
+
+단점:
+1. 비교 횟수가 많음 (최악의 경우 O(n²))
+2. 이미 정렬된 부분도 재확인
+3. 전체적인 정보 활용 부족
+
+비교 횟수 계산:
+1라운드: 4번 비교 (0과 1,2,3,4)
+2라운드: 3번 비교 (1과 2,3,4)
+3라운드: 2번 비교 (2와 3,4)
+4라운드: 1번 비교 (3과 4)
+총 10번 비교 (4+3+2+1)`
+```
+
+## 🚀 더 효율적인 알고리즘 제안
+
+### **개선된 접근법 1: 토너먼트 정렬**
+
+```text
+`토너먼트 방식 아이디어:
+먼저 가장 큰 값과 가장 작은 값을 찾아내기
+
+1단계: 가장 큰 카드 찾기
+- 비교 (0,1), (2,3): 2번 비교로 2명의 승자
+- 승자끼리 비교: 1번 비교
+- 최종 승자와 남은 카드 비교: 1번 비교
+총 4번 비교로 최대값 확정
+
+2단계: 가장 작은 카드 찾기
+- 최대값을 제외한 4장에서 최소값 찾기
+- 3번 비교로 최소값 확정
+
+3단계: 중간값들 정렬
+- 남은 3장 중 가운데값 찾기
+- 2번 비교면 충분
+
+총 비교 횟수: 4 + 3 + 2 = 9번`
+```
+
+### **개선된 접근법 2: 이진 삽입 정렬**
+
+```text
+`이진 삽입 정렬 방식:
+첫 번째 카드는 이미 정렬된 것으로 간주
+
+1단계: 두 번째 카드 위치 찾기
+- 첫 번째 카드와 비교: 1번
+- 위치 확정 및 삽입
+
+2단계: 세 번째 카드 위치 찾기
+- 이진 탐색으로 위치 찾기: 최대 2번 비교
+- 위치 확정 및 삽입
+
+3단계: 네 번째 카드 위치 찾기
+- 이진 탐색: 최대 2번 비교
+
+4단계: 다섯 번째 카드 위치 찾기
+- 이진 탐색: 최대 3번 비교
+
+총 비교 횟수: 1 + 2 + 2 + 3 = 8번`
+```
+
+### **개선된 접근법 3: 정보 활용 최적화**
+
+```text
+`각 비교에서 얻은 정보를 최대한 활용:
+
+1단계: 구조적 비교
+- (0,1), (2,3) 동시 비교: 2번
+- 각 쌍의 승자끼리 비교: 1번
+- 이제 4장의 대략적 순서 파악 가능
+
+2단계: 나머지 카드 위치 찾기
+- 남은 1장을 기존 순서에 삽입
+- 이진 탐색으로 2-3번 비교
+
+3단계: 미세 조정
+- 필요시 인접한 카드들 간 순서 확정
+- 1-2번 추가 비교
+
+총 비교 횟수: 3 + 3 + 2 = 8번 이하`
+```
+
+## 📊 알고리즘 비교 분석
+
+### **각 방법의 성능 비교**
+
+```text
+`방법별 비교 횟수:
+
+1. 제시된 버블 정렬: 10번
+   - 장점: 구현 단순, 안정적
+   - 단점: 비효율적
+
+2. 토너먼트 정렬: 9번
+   - 장점: 극값 빠른 발견
+   - 단점: 중간 과정 복잡
+
+3. 이진 삽입 정렬: 8번
+   - 장점: 효율적, 점진적 구축
+   - 단점: 위치 이동 복잡
+
+4. 정보 활용 최적화: 7-8번
+   - 장점: 가장 효율적
+   - 단점: 구현 복잡도 높음
+
+이론적 최소값:
+5장 정렬의 이론적 최소 비교 횟수는 7번
+(정보 이론에 따른 계산: ⌈log₂(5!)⌉ = ⌈log₂(120)⌉ = 7)`
+```
+
+### **실제 구현 예시 (최적화된 방법)**
+
+## 🎯 실무에서의 교훈
+
+```text
+`최적화된 정렬 절차:
+
+1단계: 구조 파악 (3번 비교)
+- 영희야, 카드 0과 1을 비교해줘
+- 영희야, 카드 2와 3을 비교해줘  
+- 영희야, (0,1의 승자)와 (2,3의 승자)를 비교해줘
+
+현재 상태: 4장의 대략적 순서 파악됨
+예: A < B, C < D, B < D 라면
+순서: A < B < D, C < D (C의 정확한 위치 미확정)
+
+2단계: 나머지 카드(4번) 삽입 (2-3번 비교)
+- 이진 탐색으로 카드 4의 위치 찾기
+- 영희야, 카드 4와 (중간값) 비교해줘
+- 필요시 추가 비교로 정확한 위치 확정
+
+3단계: 미확정 부분 정리 (1-2번 비교)
+- 남은 애매한 순서들 확정
+- 영희야, 마지막 애매한 카드들 비교해줘
+
+총 7-8번 비교로 완전한 정렬 달성`
+```
+
+### **절차적 사고의 중요성**
+
+```text
+`이 문제에서 배울 수 있는 것들:
+
+1. 문제 분석의 중요성:
+   - 제약사항 명확히 파악
+   - 사용 가능한 자원과 능력 정의
+   - 목표 명확화 (최소 횟수)
+
+2. 알고리즘 설계 원칙:
+   - 단순함 vs 효율성의 균형
+   - 정보 활용 최대화
+   - 단계별 검증 가능성
+
+3. 최적화 사고:
+   - 현재 방법의 문제점 분석
+   - 대안적 접근법 탐색
+   - 이론적 한계와 실용적 구현의 균형
+
+4. 절차 문서화:
+   - 각 단계별 명확한 지시사항
+   - 조건별 분기 처리
+   - 예외 상황 대응 방안`
+```
+
+### **프로그래밍에서의 응용**
+
+```text
+`이런 사고 과정이 프로그래밍에서 중요한 이유:
+
+1. 효율성 추구:
+   - 같은 결과를 더 적은 자원으로
+   - 시간 복잡도와 공간 복잡도 고려
+   - 사용자 경험 개선
+
+2. 제약사항 하에서의 최적화:
+   - 제한된 메모리, CPU, 네트워크
+   - 사용자 입력의 제약
+   - 시스템 환경의 한계
+
+3. 단계별 검증:
+   - 각 단계가 올바르게 동작하는지 확인
+   - 전체 과정의 논리적 일관성
+   - 예외 상황에 대한 대응
+
+4. 협업에서의 명확한 소통:
+   - 다른 사람도 이해할 수 있는 절차
+   - 단계별 역할과 책임 분담
+   - 결과에 대한 검증 가능성`
+```
+
+## 🏆 결론
+
+제시해주신 버블 정렬 방식은 **안전하고 확실한 방법**이지만, 7-8번의 비교로도 같은 결과를 얻을 수 있습니다.
+
+핵심은 **각 비교에서 얻은 정보를 최대한 활용**하여 다음 비교를 더 효율적으로 만드는 것입니다. 이런 사고 과정이 바로 **프로그래밍의 본질인 절차적 사고와 최적화**를 보여주는 좋은 예시입니다.
