feat(운영체제): 프로세스 상태 sleep과 suspend

--- a/docs/2.운영체제/3.CPU와Proces그리고Thread/2.프로세스와스레드.md
+++ b/docs/2.운영체제/3.CPU와Proces그리고Thread/2.프로세스와스레드.md
@@ -520,3 +520,279 @@ CPU Cores:  [P9][P10][P11][P12][P1][P2][P3][P4]
 ```
 
 이러한 **프로세스 관리 시스템**을 통해 **수백 개의 프로세스가 제한된 CPU 자원을 효율적으로 공유**하여 **멀티태스킹 환경**을 구현할 수 있다.
+
+
+## 프로세스 상태 sleep과 suspend
+
+### 보류 상태를 포함한 프로세스 상태도
+
+```
+디스패치(Dispatch)
+생성 상태 → 준비 상태  ────────────→  실행 상태 ────→ 완료 상태    
+         +PCB 생성   ←────────────          
+                     타임아웃(인터럽트)
+                     
+      |    ↑          ↓ 입출력 요청
+      |    |  재시작   ↓ (I/O Request)                         활성 상태
+      |    |      대기 상태                                    (Active)
+보류   |    |  재시작 ↑  ↓ 보류                                 
+      ↓    |         입출력 완료                               보류 상태
+보류 준비 상태  ←   보류 대기 상태                            (Suspended)
+            입출력 완료
+            (인터럽트)
+```
+
+### sleep과 suspend의 본질적 차이
+
+**suspend는 실행 흐름의 의도가 아닌 외부 요인에 의한 상태 변화**이지만 **sleep은 자발적인 상태 변화**이다.
+
+**의도성에 따른 구분**:
+
+- **sleep()**: "나 좀 쉴게" - **프로세스/스레드 스스로 결정**
+- **suspend()**: "너 좀 치워봐" - **외부(OS, 사용자, 시스템)에서 강제**
+
+그래서 **실행 준비 Ready Queue에서 sleep()이나 suspend() 보류가 발생하면 해당 큐에서 이탈**하게 된다.
+
+### sleep() 메서드의 실제 동작과 지연 시간
+
+우리가 **sleep() 메서드를 호출할 때 인자 값으로 ms를 넘겨주는데** 이때 만약 **10ms라는 인자 값을 주면 이 스레드는 10ms + 알파만큼의 시간이 소요**되는데 그 이유는 **해당 대기열에서 이탈한 다음 다시 재진입하기 때문**이다.
+
+**sleep() 큐 이탈 및 재진입 과정**:
+
+```
+sleep() 호출 전 Ready Queue:
+┌─────┬─────┬─────┬─────┬─────┐
+│  1  │  2  │  3  │  4  │  5  │
+└─────┴─────┴─────┴─────┴─────┘
+  ↑ (1번이 sleep() 호출)
+
+10ms 후 Ready Queue (1번 재진입):
+┌─────┬─────┬─────┬─────┐
+│  3  │  4  │  5  │  1  │ ← 맨 뒤로 재진입
+└─────┴─────┴─────┴─────┘
+```
+
+**10ms 후에 다시 대기열 큐에 재진입한 후 앞의 연산이 전부 종료되어야 다시 연산을 실행**한다.
+
+그래서 **큐에서 이탈한 다음에 다시 재진입할 때 알파만큼의 시간이 추가되는데 이 시간은 예측할 수가 없다**.
+
+**실제 sleep() 지연 시간 분석**:
+
+```c
+#include <time.h>
+#include <unistd.h>
+
+// sleep(10ms) 호출 시 실제 소요 시간
+clock_t start = clock();
+usleep(10000);  // 10ms sleep
+clock_t end = clock();
+
+// 결과: 10ms + 스케줄링 지연 (보통 1~50ms 추가)
+// 실제 소요 시간: 11~60ms (시스템 부하에 따라 가변)
+```
+
+### 컨텍스트(Context)와 컨텍스트 스위칭
+
+그래서 **하나의 프로세스가 흐름에 따라 연산을 하고 있는데 sleep, suspend를 만나서 일시정지**가 된다.
+
+```
+프로세스 실행 흐름:
+|
+| 연산 진행
+|
+|─────── 일시 정지 (sleep/suspend)
+|
+| 연산 재개 (동일한 지점부터)
+|
+↓
+```
+
+이렇게 **일시정지가 된 다음에 다시 CPU를 사용하게 될 때 정지되었던 부분부터 흐름을 이어가야** 한다.
+
+- 이때 등장하는 용어가 문맥(Context)이다.
+
+### 멀티프로세스 환경에서의 컨텍스트 스위칭
+
+**만약 CPU 코어 1개일 때**:
+
+```
+Process A          Process B          Process C
+|                  |                    |
+| 실행 중           | 대기               | 대기
+|─── 일시정지       | 실행 시작           | 대기
+| 대기              |                    |─── 일시정지
+|                  |─── 일시정지         | 대기
+| 실행 재개         | 대기               | 실행 시작
+↓                  ↓                    ↓
+
+시분할로 번갈아가며 실행 (각각 10ms씩 할당)
+```
+
+위의 프로세스 중 **하나의 흐름만 연산**할 것이다. 그러면 만약에 **A를 연산하고 있으면 다른 B, C는 어느 지점에서 연산을 일시정지시켜야** 한다. **A의 문맥에서 B의 문맥으로 이동하는 것을 컨텍스트 스위치**라고 한다.
+
+### PCB에 저장되는 컨텍스트 정보
+
+이렇게 **작업 중인 프로세스에서 다른 프로세스로 컨텍스트 스위칭할 때 PCB에 현재 상태를 저장**한다.
+
+그러면 **어떤 상태를 저장할까? 바로 문맥을 이어가기 위한 상태, 일시정지한 지점의 정보를 저장**한다.
+
+**실행한다는 것은 컴퓨터에게는 연산한다는 의미**이고 이 **연산의 주체는 CPU**이다. 그러면 이 **CPU가 연산을 하면 끊임없이 이 상태가 변화하게 되는데 이 상태에 대한 정보를 CPU의 Register에 저장**한다.
+
+### PCB(Process Control Block)의 상세 구성
+
+**PCB의 핵심 구성 요소들**:
+
+```c
+struct PCB {
+    // 1. 프로세스 식별 정보
+    int process_id;           // PID (Process ID)
+    int parent_process_id;    // PPID (Parent Process ID)
+    int user_id;             // UID (User ID)
+    int group_id;            // GID (Group ID)
+    
+    // 2. 프로세스 상태 정보
+    enum process_state {
+        NEW,                 // 생성
+        READY,              // 준비
+        RUNNING,            // 실행
+        BLOCKED,            // 대기
+        SUSPENDED_READY,    // 보류 준비
+        SUSPENDED_BLOCKED,  // 보류 대기
+        TERMINATED          // 완료
+    } state;
+    
+    // 3. CPU 레지스터 정보 (컨텍스트)
+    struct cpu_context {
+        uint64_t rax, rbx, rcx, rdx;    // 범용 레지스터
+        uint64_t rsi, rdi, rbp, rsp;    // 인덱스, 포인터 레지스터
+        uint64_t r8, r9, r10, r11;      // 확장 레지스터
+        uint64_t r12, r13, r14, r15;
+        uint64_t rip;                   // 프로그램 카운터
+        uint64_t rflags;                // 상태 플래그
+    } cpu_context;
+    
+    // 4. 메모리 관리 정보
+    struct memory_info {
+        void* code_base;        // 코드 영역 시작 주소
+        void* data_base;        // 데이터 영역 시작 주소
+        void* heap_base;        // 힙 영역 시작 주소
+        void* stack_base;       // 스택 영역 시작 주소
+        size_t total_size;      // 전체 메모리 크기
+        struct page_table* pt;  // 페이지 테이블 포인터
+    } memory;
+    
+    // 5. 스케줄링 정보
+    int priority;               // 우선순위
+    int time_slice;            // 타임 슬라이스
+    clock_t cpu_time_used;     // 사용한 CPU 시간
+    clock_t creation_time;     // 생성 시간
+    
+    // 6. I/O 및 파일 정보
+    struct file_descriptor_table {
+        struct file* files[MAX_FILES];  // 열린 파일들
+        int count;                      // 열린 파일 개수
+    } fd_table;
+    
+    // 7. 프로세스 관계 정보
+    struct PCB* parent;         // 부모 프로세스
+    struct PCB* children;       // 자식 프로세스들
+    struct PCB* siblings;       // 형제 프로세스들
+    
+    // 8. 신호 처리 정보
+    struct signal_info {
+        uint64_t pending_signals;       // 대기 중인 신호
+        struct sigaction handlers[64];  // 신호 핸들러들
+    } signals;
+    
+    // 9. 동기화 정보
+    struct sync_info {
+        struct semaphore* waiting_on;   // 대기 중인 세마포어
+        struct mutex* locked_mutexes;   // 획득한 뮤텍스들
+    } sync;
+};
+```
+
+### 컨텍스트 스위칭의 상세 과정
+
+**컨텍스트 스위칭 단계별 과정**:
+
+```c
+// 1단계: 현재 프로세스 상태 저장
+void save_context(struct PCB* current_pcb) {
+    // CPU 레지스터 값을 PCB에 저장
+    current_pcb->cpu_context.rax = get_register(RAX);
+    current_pcb->cpu_context.rbx = get_register(RBX);
+    current_pcb->cpu_context.rip = get_register(RIP);  // 현재 실행 위치
+    // ... 모든 레지스터 저장
+    
+    // 메모리 맵 정보 저장
+    current_pcb->memory.heap_base = get_heap_pointer();
+    current_pcb->memory.stack_base = get_stack_pointer();
+}
+
+// 2단계: 다음 프로세스 상태 복원
+void restore_context(struct PCB* next_pcb) {
+    // PCB에서 CPU 레지스터 값 복원
+    set_register(RAX, next_pcb->cpu_context.rax);
+    set_register(RBX, next_pcb->cpu_context.rbx);
+    set_register(RIP, next_pcb->cpu_context.rip);  // 실행 위치 복원
+    // ... 모든 레지스터 복원
+    
+    // 메모리 맵 전환
+    switch_page_table(next_pcb->memory.pt);
+}
+
+// 3단계: 완전한 컨텍스트 스위칭
+void context_switch(struct PCB* current, struct PCB* next) {
+    save_context(current);      // 현재 프로세스 상태 저장
+    current->state = READY;     // 상태를 준비로 변경
+    next->state = RUNNING;      // 다음 프로세스를 실행으로 변경
+    restore_context(next);      // 다음 프로세스 상태 복원
+    // 이 시점에서 완전히 다른 프로세스가 실행됨
+}
+```
+
+### suspend가 발생하는 구체적 상황들
+
+**suspend가 발생하는 경우들**:
+
+1. **메모리 부족 상황**:
+
+```c
+// RAM이 부족할 때 비활성 프로세스를 스와핑
+if (available_memory < MINIMUM_THRESHOLD) {
+    suspend_least_recently_used_process();  // LRU 프로세스 suspend
+    swap_to_disk(suspended_process);        // 디스크로 스왑
+}
+```
+
+1. **시스템 자원 부족**:
+
+```c
+// CPU 사용률이 너무 높을 때
+if (cpu_usage > 95%) {
+    suspend_low_priority_processes();  // 낮은 우선순위 프로세스들 suspend
+}
+```
+
+1. **비정상적인 동작 감지**:
+
+```c
+// 무한루프나 과도한 자원 사용 감지
+if (process_cpu_time > MAX_CPU_TIME) {
+    suspend_process(runaway_process);  // 폭주 프로세스 suspend
+    log_error("Process exceeded CPU time limit");
+}
+```
+
+1. **사용자/관리자 개입**:
+
+```c
+# 사용자가 직접 프로세스 일시정지
+kill -STOP 1234  # PID 1234 프로세스 suspend
+
+# 작업 관리자에서 "프로세스 일시 중단" 클릭
+# → OS가 해당 프로세스를 suspend 상태로 전환
+```
+
+이러한 **프로세스 상태 관리 시스템**을 통해 OS는 **제한된 시스템 자원을 효율적으로 관리**하면서 **안정적인 멀티태스킹 환경**을 제공할 수 있다.
