--- a/docs/2.운영체제/3.CPU와Proces그리고Thread/2.프로세스와스레드.md
+++ b/docs/2.운영체제/3.CPU와Proces그리고Thread/2.프로세스와스레드.md
@@ -795,4 +795,117 @@ kill -STOP 1234  # PID 1234 프로세스 suspend
 # → OS가 해당 프로세스를 suspend 상태로 전환
 ```
 
-이러한 **프로세스 상태 관리 시스템**을 통해 OS는 **제한된 시스템 자원을 효율적으로 관리**하면서 **안정적인 멀티태스킹 환경**을 제공할 수 있다.
+이러한 **프로세스 상태 관리 시스템**을 통해 OS는 **제한된 시스템 자원을 효율적으로 관리**하면서 **안정적인 멀티태스킹 환경**을 제공할 수 있다.  
+
+## sleep() 함수의 다층적 동작 원리
+
+### 1. Thread 관점에서의 sleep() 동작
+
+**스레드는 프로세스 내에서 독립적인 실행 흐름**을 가집니다. 하나의 스레드가 `sleep()`을 호출해도 **같은 프로세스의 다른 스레드들은 전혀 영향받지 않습니다**.
+
+```java
+Thread thread1 = new Thread(() -> {
+    System.out.println("Thread 1 시작");
+    Thread.sleep(1000);  // 1초 대기
+    System.out.println("Thread 1 종료");  
+});
+
+Thread thread2 = new Thread(() -> {
+    System.out.println("Thread 2는 계속 실행");
+    // sleep() 없이 계속 실행
+});
+```
+
+**TCB(Thread Control Block)에서는 각 스레드별로 독립적인 상태 관리**가 이루어집니다. Thread 1이 `SLEEPING` 상태가 되어도 Thread 2는 `RUNNING` 상태를 유지합니다.
+
+**핵심은 스레드별 독립성**입니다. 각 스레드는 자신만의 **스택 영역과 레지스터 상태**를 가지고 있어서, 하나가 sleep해도 다른 스레드의 실행에는 전혀 지장이 없습니다. 이는 **멀티스레드 프로그래밍의 가장 큰 장점** 중 하나입니다.
+
+**가구와 세대원 비유**로 설명하면, 한 세대원(스레드)이 개인방에서 잠을 자도 다른 세대원들은 거실이나 다른 공간에서 자유롭게 활동할 수 있는 것과 같습니다.
+
+### 2. Process 관점에서의 sleep() 동작
+
+**프로세스는 여러 스레드를 관리하는 컨테이너** 역할을 합니다. PCB(Process Control Block)에서는 **전체 프로세스의 상태와 각 스레드들의 상태를 종합적으로 관리**합니다.
+
+하나의 스레드가 sleep해도 **프로세스 전체의 상태는 변하지 않습니다**. 왜냐하면 다른 실행 가능한 스레드들이 여전히 존재하기 때문입니다. 프로세스가 `BLOCKED` 상태가 되려면 **모든 스레드가 sleep하거나 I/O 대기 상태**가 되어야 합니다.
+
+**메모리 관점에서 보면** 더욱 흥미롭습니다. sleep한 스레드의 **Stack 영역은 그대로 유지**되고, **Heap, Data, Code 영역은 다른 스레드들이 계속 사용**할 수 있습니다. 즉, 메모리 자원의 공유는 그대로 이루어지면서 실행만 중단되는 것입니다.
+
+**프로세스는 운영체제로부터 할당받은 가상 메모리 공간** 안에서 여러 스레드가 활동하는 무대를 제공합니다. 한 스레드가 잠시 무대에서 내려가도 무대 자체는 그대로 유지되고 다른 스레드들이 계속 공연을 이어갈 수 있습니다.
+
+### 3. CPU 관점에서의 sleep() 동작
+
+**CPU는 물리적으로 제한된 자원**입니다. 8코어 CPU라면 동시에 최대 8개의 스레드만 실제로 실행할 수 있습니다. 하지만 실제로는 수백, 수천 개의 스레드가 시스템에 존재합니다.
+
+**CPU 스케줄러는 이 한정된 자원을 효율적으로 분배**하는 역할을 합니다. 스레드가 `sleep()`을 호출하면 스케줄러는 즉시 "아, 이 스레드는 당분간 CPU가 필요 없구나"라고 판단하고 **해당 CPU 코어를 다른 대기 중인 스레드에게 할당**합니다.
+
+**시분할 시스템의 핵심**은 여기에 있습니다. 각 스레드가 10ms씩 CPU를 사용한다면, sleep하는 스레드는 자발적으로 자신의 시간을 포기하고 다른 스레드에게 기회를 양보하는 것입니다.
+
+**컨텍스트 스위칭**이 이때 발생합니다. sleep하는 스레드의 레지스터 상태를 TCB에 저장하고, 다음에 실행할 스레드의 상태를 레지스터에 복원합니다. 이 과정은 마이크로초 단위로 이루어지지만, 시스템 전체의 효율성을 크게 높입니다.
+
+### 4. Timer Interrupt와 깨우기 메커니즘
+
+**운영체제는 하드웨어 타이머를 이용해 주기적으로 인터럽트**를 발생시킵니다. 보통 1ms마다 발생하는 이 인터럽트는 시스템의 심장박동과 같습니다.
+
+**타이머 인터럽트가 발생할 때마다** 운영체제는 두 가지 중요한 작업을 수행합니다:
+
+1. **Sleep Queue 검사**: 깨워야 할 시간이 된 스레드들을 찾아서 Ready Queue로 이동
+2. **Time Slice 관리**: 현재 실행 중인 스레드의 할당 시간이 끝났는지 확인
+
+**Sleep Queue는 시간 순으로 정렬**되어 있어서 효율적으로 관리됩니다. 가장 앞에 있는 스레드의 깨어날 시간만 확인하면 되고, 그 시간이 아직 안 되었다면 뒤의 스레드들도 모두 아직 시간이 안 된 것입니다.
+
+**정확한 시간에 깨어나는 것은 보장되지 않습니다**. 타이머 인터럽트는 1ms마다 발생하므로 최대 1ms의 오차가 있을 수 있고, 깨어나더라도 Ready Queue에서 대기해야 하므로 추가 지연이 발생할 수 있습니다.
+
+### 5. 전체적인 sleep() 실행 흐름
+
+**Java에서 Thread.sleep() 호출 시 전체 흐름**을 단계별로 살펴보겠습니다:
+
+**1단계: User Mode에서 호출**
+Java 애플리케이션에서 `Thread.sleep(1000)`을 호출합니다. 이는 사용자 모드에서 실행되는 일반적인 메서드 호출입니다.
+
+**2단계: JVM 내부 처리**
+
+JVM은 이 호출을 받아서 내부적으로 네이티브 메서드를 호출합니다. JVM의 스레드 관리자가 현재 스레드의 상태를 확인하고 sleep 요청을 준비합니다.
+
+**3단계: System Call 진입**
+JVM은 운영체제의 `nanosleep()` 시스템 콜을 호출합니다. 이때 **User Mode에서 Kernel Mode로 전환**이 발생합니다. 이 전환은 특별한 CPU 명령어(x86에서는 `syscall`)를 통해 이루어집니다.
+
+**4단계: Kernel Mode에서 처리**
+커널은 시스템 콜을 받아서 다음 작업들을 수행합니다:
+
+- 현재 스레드의 컨텍스트(레지스터 상태)를 TCB에 저장
+- 스레드 상태를 `RUNNING`에서 `SLEEPING`으로 변경
+- Ready Queue에서 해당 스레드를 제거
+- Sleep Queue에 깨어날 시간과 함께 추가
+- 다음에 실행할 스레드를 스케줄러가 선택
+- 선택된 스레드로 컨텍스트 스위칭 수행
+
+**5단계: 다른 스레드 실행**
+CPU는 이제 완전히 다른 스레드를 실행합니다. sleep한 스레드는 메모리에는 존재하지만 CPU 자원은 전혀 사용하지 않습니다.
+
+**6단계: Timer Interrupt 발생**
+1ms마다 발생하는 타이머 인터럽트에서 커널은 Sleep Queue를 확인합니다. 깨어날 시간이 된 스레드를 발견하면 Ready Queue로 이동시킵니다.
+
+**7단계: 재스케줄링과 복귀**
+Ready Queue에 들어간 스레드는 스케줄러의 선택을 받아 다시 CPU를 할당받습니다. 이때 저장된 컨텍스트가 복원되고, **Kernel Mode에서 User Mode로 복귀**하여 sleep() 호출 다음 줄부터 실행을 재개합니다.
+
+### 6. 메모리와 성능 관점에서의 특징
+
+**메모리 관점에서 sleep()은 매우 효율적**입니다. 실행이 중단되어도 해당 스레드의 메모리는 그대로 유지되고, 다른 스레드들이 공유 메모리(Heap, Data 영역)에 자유롭게 접근할 수 있습니다.
+
+**하지만 성능적으로는 주의해야 할 점들**이 있습니다:
+
+**컨텍스트 스위칭 비용**: sleep() 호출과 깨어날 때 각각 한 번씩, 총 두 번의 컨텍스트 스위칭이 발생합니다. 이는 수천 개의 CPU 사이클을 소모하는 상당한 비용입니다.
+
+**캐시 무효화**: 다른 스레드가 CPU를 사용하면서 L1, L2 캐시의 내용이 바뀝니다. sleep한 스레드가 깨어나면 캐시 미스가 많이 발생할 수 있습니다.
+
+**스케줄링 지연**: Ready Queue에서 대기하는 시간은 예측할 수 없습니다. 1ms sleep을 요청해도 실제로는 수십 ms가 걸릴 수 있습니다.
+
+### 7. 실제 시스템에서의 동작 차이
+
+**Linux에서는** 스레드를 경량 프로세스(LWP)로 구현하므로, 각 스레드가 독립적인 스케줄링 단위가 됩니다. sleep()한 스레드는 완전히 스케줄링에서 제외됩니다.
+
+**Windows에서는** 스레드가 기본 스케줄링 단위이므로 더 직접적으로 관리됩니다. Sleep() API는 커널의 타이머 객체를 이용해 구현됩니다.
+
+**멀티코어 환경에서는** 각 코어가 독립적으로 스케줄링을 수행할 수 있어서, 하나의 코어에서 스레드가 sleep해도 다른 코어들은 전혀 영향받지 않습니다.
+
+이러한 **복잡한 상호작용을 통해 sleep() 함수는 단순해 보이지만 실제로는 운영체제의 핵심 기능들이 모두 동원되는 정교한 메커니즘**입니다. Thread, Process, CPU 각 계층에서의 역할이 조화롭게 어우러져 효율적인 멀티태스킹 환경을 만들어냅니다.
