feat(운영체제): Process의 생성과 복사

--- a/docs/2.운영체제/3.CPU와Proces그리고Thread/2.프로세스와스레드.md
+++ b/docs/2.운영체제/3.CPU와Proces그리고Thread/2.프로세스와스레드.md
@@ -909,3 +909,401 @@ Ready Queue에 들어간 스레드는 스케줄러의 선택을 받아 다시 CP
 **멀티코어 환경에서는** 각 코어가 독립적으로 스케줄링을 수행할 수 있어서, 하나의 코어에서 스레드가 sleep해도 다른 코어들은 전혀 영향받지 않습니다.
 
 이러한 **복잡한 상호작용을 통해 sleep() 함수는 단순해 보이지만 실제로는 운영체제의 핵심 기능들이 모두 동원되는 정교한 메커니즘**입니다. Thread, Process, CPU 각 계층에서의 역할이 조화롭게 어우러져 효율적인 멀티태스킹 환경을 만들어냅니다.
+
+
+## Process의 생성과 복사
+
+### 프로세스의 접근 제어와 권한 공유
+
+**OS가 자원에 대한 접근을 제어할 때는 프로세스 단위로 접근을 제어**합니다. 이는 보안과 안정성을 위한 핵심 원칙입니다. **프로세스에 특정 자원에 대한 권한이 주어지면 프로세스에 속한 모든 스레드들은 그 권한을 공유**합니다.
+
+```
+🏠 프로세스 (가구 단위로 권한 관리)
+┌─────────────────────────────────────────────────────┐
+│  📁 파일 접근 권한: READ/WRITE                      │
+│  🌐 네트워크 권한: 80포트 접근 가능                  │
+│  🖥️ 하드웨어 권한: 그래픽카드 사용 가능               │
+│                                                     │
+│  👨 스레드1   👩 스레드2   👦 스레드3               │
+│   ↓           ↓           ↓                        │
+│  동일한       동일한       동일한                    │
+│  권한 공유    권한 공유    권한 공유                  │
+└─────────────────────────────────────────────────────┘
+```
+
+예를 들어, 웹 브라우저 프로세스가 특정 파일에 대한 읽기 권한을 받으면 해당 프로세스 내의 모든 스레드(UI 스레드, 네트워크 스레드, 렌더링 스레드 등)가 그 파일을 읽을 수 있습니다. 이는 **권한 관리의 복잡성을 줄이고 일관성을 보장**하는 중요한 설계 원칙입니다.
+
+하지만 이런 권한 공유 방식은 **보안상 위험**도 내포합니다. 한 스레드가 악성 코드에 감염되면 해당 프로세스의 모든 권한을 악용할 수 있기 때문입니다. 그래서 최소 권한 원칙(Principle of Least Privilege)이 중요합니다.
+
+**프로세스에 할당된 가상 메모리 공간은 독립적인 공간으로 보장**받습니다. 이는 각 프로세스가 다른 프로세스의 메모리에 접근할 수 없다는 의미로, 시스템의 안정성과 보안을 확보하는 중요한 메커니즘입니다.
+
+```
+🏘️ 운영체제 관리 영역
+┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐
+│   프로세스 A     │  │   프로세스 B     │  │   프로세스 C     │
+│                 │  │                 │  │                 │
+│ ┌─────────────┐ │  │ ┌─────────────┐ │  │ ┌─────────────┐ │
+│ │독립적인     │ │  │ │독립적인     │ │  │ │독립적인     │ │
+│ │가상메모리   │ │  │ │가상메모리   │ │  │ │가상메모리   │ │
+│ │공간        │ │  │ │공간        │ │  │ │공간        │ │
+│ └─────────────┘ │  │ └─────────────┘ │  │ └─────────────┘ │
+│                 │  │                 │  │                 │
+│      🚫←→🚫      │  │      🚫←→🚫      │  │      🚫←→🚫      │
+└─────────────────┘  └─────────────────┘  └─────────────────┘
+     서로 접근 불가        서로 접근 불가        서로 접근 불가
+```
+
+이런 **메모리 격리는 하드웨어 차원에서 지원**됩니다. MMU(Memory Management Unit)가 각 프로세스의 페이지 테이블을 통해 가상 주소를 물리 주소로 변환하면서, 다른 프로세스의 메모리 영역에 접근하려 하면 **페이지 폴트 예외**를 발생시킵니다.
+
+### 새로운 프로세스 생성과 메모리 할당
+
+**새로운 프로세스가 생성될 때마다**(새로운 프로그램을 실행할 때) **OS는 새롭게 생성되는 프로세스에게 가상 메모리 공간을 할당**해야 합니다. 이는 상당한 비용이 드는 작업입니다.
+
+```
+💻 프로그램 실행 요청
+        ↓
+┌─────────────────────────────────────┐
+│       OS 메모리 관리자              │
+│                                     │
+│  1️⃣ 새로운 VMS 공간 할당           │
+│     ┌─────────────────────────┐    │
+│     │     가상 메모리 공간     │    │
+│     │  ┌─────┬─────┬─────┐   │    │
+│     │  │Stack│Heap │Code │   │    │
+│     │  └─────┴─────┴─────┘   │    │
+│     └─────────────────────────┘    │
+│                                     │
+│  2️⃣ PCB 생성 및 초기화             │
+│     ┌─────────────────────────┐    │
+│     │    Process Control      │    │
+│     │         Block           │    │
+│     │   PID: 1234            │    │
+│     │   State: NEW           │    │
+│     └─────────────────────────┘    │
+│                                     │
+│  3️⃣ 페이지 테이블 설정             │
+│  4️⃣ 메모리 맵핑 구성               │
+└─────────────────────────────────────┘
+```
+
+새로운 가상 메모리 공간을 할당한다는 것은 단순히 메모리만 주는 것이 아닙니다. **페이지 테이블 생성, 메모리 맵 설정, 세그먼트 등록** 등 복잡한 메모리 관리 작업들이 모두 포함됩니다.
+
+**가상 메모리 공간 할당 과정**은 다음과 같습니다:
+
+- **주소 공간 예약**: 4GB(32비트) 또는 수십 TB(64비트)의 가상 주소 공간 할당
+- **페이지 테이블 초기화**: 가상 주소와 물리 주소를 매핑할 테이블 생성
+- **세그먼트 설정**: 코드, 데이터, 스택 영역의 접근 권한과 크기 설정
+- **메모리 보호 설정**: 각 영역별 읽기/쓰기/실행 권한 설정
+
+이 과정에서 **실제 물리 메모리는 즉시 할당되지 않습니다**. Demand Paging 기법을 사용해서 실제로 접근할 때 물리 메모리를 할당합니다. 이는 메모리 사용량을 최적화하는 중요한 기법입니다.
+
+### 부모-자식 프로세스 관계
+
+**어떤 프로세스가 있을 때 이 프로세스는 자신만의 PCB와 VMS(Virtual Memory Space)를 가집니다**. 이때 **이 프로세스가 새로운 프로세스를 생성한다면 원래 있던 프로세스를 부모 프로세스, 생성된 프로세스를 자식 프로세스**라고 합니다.
+
+```
+🌳 프로세스 트리 구조
+                    init (PID: 1)
+                         │
+            ┌────────────┼────────────┐
+            │            │            │
+        systemd      kernel         ...
+        (PID: 2)    threads
+            │
+        ┌───┼───┐
+        │   │   │
+      bash ssh  Apache
+    (PID:100)    (PID: 200)
+        │            │
+    ┌───┼───┐    ┌───┼───┐
+    │   │   │    │   │   │
+   vim  ls  cat  worker worker
+               threads threads
+
+부모 프로세스 → 자식 프로세스 (권한 상속)
+```
+
+이런 관계는 **트리 구조**를 형성합니다. 시스템이 부팅될 때 가장 먼저 생성되는 `init` 프로세스(Linux) 또는 `System` 프로세스(Windows)가 루트가 되고, 모든 프로세스는 이들의 후손이 됩니다.
+
+**부모-자식 관계의 중요한 특징들**:
+
+- **권한 상속**: 자식 프로세스는 부모의 권한을 기본적으로 상속받습니다
+- **환경 변수 상속**: PATH, HOME 등의 환경 변수가 자식에게 전달됩니다
+- **파일 디스크립터 상속**: 열린 파일들에 대한 접근 권한이 공유됩니다
+- **신호 처리**: 부모가 종료되면 자식에게 SIGTERM 신호가 전달됩니다
+
+하지만 **메모리 공간은 독립적**입니다. 부모와 자식이 각자의 가상 메모리 공간을 가지므로 서로의 변수나 데이터에 직접 접근할 수 없습니다.
+
+### Windows vs UNIX 계열의 프로세스 생성 방식
+
+**Windows에서는 createProcess()**, **UNIX 계열에서는 fork()와 exec() 이렇게 2개의 함수가 존재**합니다. 이 차이는 두 운영체제의 설계 철학을 보여줍니다.
+
+```
+🪟 Windows 방식
+┌─────────────────────────────────────┐
+│          createProcess()            │
+│                                     │
+│  부모 프로세스                       │
+│       ↓                            │
+│  ┌─────────────┐                   │
+│  │ 한 번의 호출 │                   │
+│  └─────────────┘                   │
+│       ↓                            │
+│  새로운 프로세스 + 프로그램 실행      │
+│  ┌─────────────────────────────┐   │
+│  │  💻 notepad.exe 실행         │   │
+│  │  🏠 독립적인 메모리 공간      │   │
+│  │  📝 PCB 생성               │   │
+│  └─────────────────────────────┘   │
+└─────────────────────────────────────┘
+
+🐧 UNIX 방식 (2단계 접근)
+┌─────────────────────────────────────┐
+│            fork() + exec()          │
+│                                     │
+│  부모 프로세스                       │
+│       ↓ fork()                     │
+│  ┌─────────────┐                   │
+│  │ 완전한 복사  │                   │
+│  └─────────────┘                   │
+│       ↓                            │
+│  똑같은 두 프로세스                  │
+│  ┌─────────┐  ┌─────────┐          │
+│  │  부모    │  │  자식    │          │
+│  │ (원본)   │  │ (복사본) │          │
+│  └─────────┘  └─────────┘          │
+│                    ↓ exec()         │
+│               새로운 프로그램으로    │
+│                    교체             │
+│               ┌─────────┐          │
+│               │ 새 프로그램│          │
+│               └─────────┘          │
+└─────────────────────────────────────┘
+```
+
+- Windows의 createProcess()는 한 번의 호출로 새로운 프로세스를 생성하고 원하는 프로그램을 실행시킵니다. 이는 **직관적이고 간단한 방식**입니다. 하지만 프로세스 생성과 프로그램 실행이 **원자적(atomic)으로 결합**되어 있어서 중간 단계에서 세밀한 제어가 어렵습니다.
+- UNIX의 fork()와 exec()는 프로세스 생성과 프로그램 실행을 분리한 접근법입니다. 이는 **더 유연하지만 이해하기 복잡한 방식**입니다. 하지만 이 분리된 접근법 덕분에 **파이프라인, 리다이렉션, 백그라운드 실행** 등의 고급 기능을 우아하게 구현할 수 있습니다.
+
+### 프로세스 복사의 메커니즘
+
+**프로세스의 복사는 하나의 프로세스가 생성되고 이를 메모리에 복사하는 과정**입니다. 이때 **실행 코드가 복사되고 이에 따른 PCB가 생성**됩니다. **이 시점에 이미 복사된 프로세스에 메모리가 할당**됩니다.
+
+프로세스 복사는 단순한 메모리 복사가 아닙니다. **가상 메모리 맵핑, 페이지 테이블 설정, 파일 디스크립터 복사, 시그널 핸들러 설정** 등 수많은 작업이 함께 이루어집니다.
+
+**실행 파일 형식도 중요한 역할**을 합니다. **C/C++로 실행 파일을 만들 때 UNIX 계열은 a.out ELF 형식 파일이, Windows는 a.exe PE 포맷 형식의 파일**이 만들어집니다.
+
+```
+📁 실행 파일 형식 비교
+
+🐧 UNIX/Linux (ELF - Executable and Linkable Format)
+┌─────────────────────────────────┐
+│            a.out                │
+│  ┌─────────────────────────┐   │
+│  │      ELF Header         │   │ ← 파일 기본 정보
+│  ├─────────────────────────┤   │
+│  │   Program Header Table  │   │ ← 실행 시 메모리 구성
+│  ├─────────────────────────┤   │
+│  │      .text section      │   │ ← 실행 코드 (복사 대상)
+│  ├─────────────────────────┤   │
+│  │      .data section      │   │ ← 초기화된 데이터
+│  ├─────────────────────────┤   │
+│  │      .bss section       │   │ ← 초기화되지 않은 데이터
+│  ├─────────────────────────┤   │
+│  │   Section Header Table  │   │ ← 섹션 정보
+│  └─────────────────────────┘   │
+└─────────────────────────────────┘
+
+🪟 Windows (PE - Portable Executable)
+┌─────────────────────────────────┐
+│            a.exe                │
+│  ┌─────────────────────────┐   │
+│  │      DOS Header         │   │ ← 호환성을 위한 헤더
+│  ├─────────────────────────┤   │
+│  │      PE Header          │   │ ← PE 파일 정보
+│  ├─────────────────────────┤   │
+│  │   Optional Header       │   │ ← 실행 정보
+│  ├─────────────────────────┤   │
+│  │    .text section        │   │ ← 실행 코드 (복사 대상)
+│  ├─────────────────────────┤   │
+│  │    .data section        │   │ ← 초기화된 데이터
+│  ├─────────────────────────┤   │
+│  │    .rdata section       │   │ ← 읽기 전용 데이터
+│  └─────────────────────────┘   │
+└─────────────────────────────────┘
+```
+
+**PE 포맷을 뜯어보면 header section이 존재**하고 **생성하고 복사할 때 이 section 영역의 text 영역을 복사**합니다. 이 `.text` 섹션에는 **실제 실행 가능한 기계어 코드**가 들어있습니다.
+
+프로세스 로더는 이 섹션 정보를 읽어서 **각 섹션을 메모리의 적절한 위치에 매핑**합니다. `.text` 섹션은 읽기+실행 권한으로, `.data` 섹션은 읽기+쓰기 권한으로 매핑됩니다. 이렇게 **프로세스의 생성이 매우 복잡한 과정**입니다.
+
+### fork()와 exec()의 차이점과 동작 원리
+
+**fork()와 exec()의 차이점을 이해하는 것은 UNIX 철학의 핵심**입니다.
+
+```
+🔄 fork() 과정 (Ctrl+C → Ctrl+V 와 유사)
+
+실행 전:
+┌─────────────────┐
+│   부모 프로세스   │
+│   PID: 100      │
+│  ┌─────────────┐│
+│  │   메모리     ││
+│  │ ┌─────────┐ ││
+│  │ │ Stack   │ ││
+│  │ │ Heap    │ ││
+│  │ │ Data    │ ││
+│  │ │ Code    │ ││
+│  │ └─────────┘ ││
+│  └─────────────┘│
+└─────────────────┘
+
+fork() 호출 후:
+┌─────────────────┐    ┌─────────────────┐
+│   부모 프로세스   │    │   자식 프로세스   │
+│   PID: 100      │    │   PID: 101      │
+│  ┌─────────────┐│    │  ┌─────────────┐│
+│  │   메모리     ││    │  │   메모리     ││
+│  │ ┌─────────┐ ││    │  │ ┌─────────┐ ││
+│  │ │ Stack   │ ││    │  │ │ Stack   │ ││
+│  │ │ Heap    │ ││    │  │ │ Heap    │ ││
+│  │ │ Data    │ ││    │  │ │ Data    │ ││
+│  │ │ Code    │ ││ 📋 │  │ │ Code    │ ││
+│  │ └─────────┘ ││복사 │  │ └─────────┘ ││
+│  └─────────────┘│    │  └─────────────┘│
+└─────────────────┘    └─────────────────┘
+      동일한 내용           동일한 내용
+```
+
+**fork()는 부모 프로세스의 완전한 복사본**을 만듭니다. **부모 프로세스에 대한 모든 정보를 복사하는 것으로, 마치 Ctrl+C 후 Ctrl+V 한 것과 유사**합니다. **복사한 다음에 register 정보만 초기화해서 완전히 새로운 코드를 사용할 수 있게** 됩니다.
+
+fork() 호출 후에는 **두 개의 동일한 프로세스**가 존재하게 됩니다. 부모와 자식은 같은 코드를 실행하지만 서로 다른 메모리 공간을 가집니다. 이때 **Copy-On-Write(COW) 기법**을 사용해서 실제로는 메모리를 즉시 복사하지 않고, 수정이 발생할 때만 복사합니다.
+
+**fork()의 반환값으로 부모와 자식을 구분**합니다:
+
+- **부모 프로세스**: 자식의 PID (양수) 반환
+- **자식 프로세스**: 0 반환
+- **오류 발생시**: -1 반환
+
+```
+🔄 exec() 과정 (기존 프로세스 덮어쓰기)
+
+exec() 호출 전:
+┌─────────────────┐
+│   현재 프로세스   │
+│   PID: 101      │
+│  ┌─────────────┐│
+│  │ 기존 프로그램 ││
+│  │ ┌─────────┐ ││
+│  │ │old_code │ ││
+│  │ │old_data │ ││
+│  │ └─────────┘ ││
+│  └─────────────┘│
+└─────────────────┘
+
+exec() 호출 후:
+┌─────────────────┐
+│   같은 프로세스   │
+│   PID: 101      │ ← PID는 그대로
+│  ┌─────────────┐│
+│  │ 새로운 프로그램││
+│  │ ┌─────────┐ ││
+│  │ │new_code │ ││ ← 내용만 교체
+│  │ │new_data │ ││
+│  │ └─────────┘ ││
+│  └─────────────┘│
+└─────────────────┘
+```
+
+**exec()는 완전히 다른 접근법**입니다. **부모 프로세스가 곧 종료된다면 이렇게 복잡하게 VMS + PCB에 기타 OS에서 하는 작업을 한 번 다 할 필요 없이, 곧 종료될 부모 프로세스에 코드만 새롭게 추가해서 실행시키자**는 것이 exec()의 아이디어입니다. **기존 코드에 새로운 코드를 덮어쓰는 방식**입니다.
+
+exec() 계열 함수들에는 여러 변형이 있습니다:
+
+- **execl()**: 인자를 리스트로 전달
+- **execv()**: 인자를 배열로 전달
+- **execle()**: 환경변수도 함께 전달
+- **execve()**: 가장 기본적인 시스템 콜
+
+**exec() 호출이 성공하면 원래 프로그램으로 돌아오지 않습니다**. 완전히 새로운 프로그램으로 교체되기 때문입니다.
+
+```
+📊 생성 방향 비교
+
+fork() 방식:
+부모 프로세스 ────┐
+                 │ 새로운 자식 생성
+                 ↓
+              자식 프로세스
+         (Parent → new Child)
+
+exec() 방식:
+기존 프로세스 ────┐
+                 │ 자신을 새 프로그램으로 교체
+                 ↓
+              변경된 프로세스
+         (Parent ← new Child)
+```
+
+**프로세스 생성 방향의 차이**:
+
+- **fork()**: Parent → new Child (부모가 자식을 생성)
+- **exec()**: Parent ← new Child (자식이 부모를 대체)
+
+### 프로세스 대기와 종료 메커니즘
+
+**프로세스 간의 동기화를 위해 대기 함수들이 존재**합니다. **Windows는 waitForSingleObject(), UNIX는 wait()**가 있습니다.
+
+**이 함수들은 호출 시 대기 상태로 변경**되어서 **보통 프로세스 레벨 단위로 하지 않고 스레드를 하나 생성해서 스레드 단위로 호출**됩니다. 이는 전체 프로세스가 블로킹되는 것을 방지하기 위함입니다.
+
+```
+🧵 스레드 기반 프로세스 대기
+
+메인 프로세스
+┌─────────────────────────────────────┐
+│  🧵 메인 스레드 (계속 실행)          │
+│     ├─ UI 처리                      │
+│     ├─ 사용자 입력 처리              │
+│     └─ 기타 작업                    │
+│                                     │
+│  🧵 대기 전용 스레드                 │
+│     ├─ waitForSingleObject()       │ ← Windows
+│     │   또는 wait()                 │ ← UNIX
+│     ├─ 자식 프로세스 종료 대기       │
+│     └─ 종료 시 콜백 실행             │
+│                                     │
+│  자식 프로세스 ────────┐            │
+│  ┌─────────────────┐  │            │
+│  │     실행 중      │  │            │
+│  └─────────────────┘  │            │
+│           │           │            │
+│           ↓ 종료      │            │
+│  ┌─────────────────┐  │            │
+│  │   exit() 호출    │──┘            │
+│  └─────────────────┘               │
+│           │                        │
+│           ↓ 신호 전달                │
+│     대기 스레드 깨어남               │
+└─────────────────────────────────────┘
+```
+
+만약 메인 스레드에서 `wait()`을 호출하면 자식 프로세스가 종료될 때까지 전체 프로세스가 멈춰버립니다. 따라서 **별도의 워커 스레드를 만들어서 그 스레드에서만 대기**하도록 하는 것이 일반적인 패턴입니다.
+
+**UNIX의 wait() 계열 함수들**:
+
+- **wait()**: 아무 자식이나 종료될 때까지 대기
+- **waitpid()**: 특정 자식 프로세스가 종료될 때까지 대기
+- **waitid()**: 더 세밀한 제어가 가능한 대기 함수
+
+**Windows의 대기 함수들**:
+
+- **WaitForSingleObject()**: 하나의 객체(프로세스, 스레드, 이벤트 등) 대기
+- **WaitForMultipleObjects()**: 여러 객체를 동시에 대기
+- **WaitForSingleObjectEx()**: 알림 가능한 대기 상태
+
+**프로세스 종료를 위해서는 exitProcess()와 exit() 함수**가 사용됩니다. **exit()는 현재 프로세스만 종료**하지만, **exitProcess()는 프로세스 전체를 강제로 종료**시킵니다.
+
+**종료 함수들의 차이**:
+
+- **exit()**: 정상적인 종료, cleanup 함수들 호출
+- **_exit()**: 즉시 종료, cleanup 생략
+- **abort()**: 비정상 종료, 코어 덤프 생성
